# paraphrase-app

./: README.md  package-lock.json
backend/: .gitignore  Cargo.toml
backend/src/: main.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
